--- a/app/src/main/res/layout/ticket_item.xml
+++ b/app/src/main/res/layout/ticket_item.xml
@@ -85,6 +85,7 @@
         <Button
             android:id="@+id/btnVerDetallesTicket"
             android:layout_width="wrap_content"
+            android:focusable="false"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/color_primario"
             android:text="Ver detalles" />
