--- a/app/src/main/res/layout/activity_crear_ticket.xml
+++ b/app/src/main/res/layout/activity_crear_ticket.xml
@@ -69,7 +69,7 @@
         app:layout_constraintTop_toBottomOf="@+id/labelDescripcion" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton"
+        android:id="@+id/btnCrearTicket"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
