--- a/app/src/main/res/layout/activity_detalle_ticket.xml
+++ b/app/src/main/res/layout/activity_detalle_ticket.xml
@@ -4,178 +4,238 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingHorizontal="32dp"
-    android:paddingTop="64dp"
     tools:context=".DetalleTicketActivity">
 
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
+    <ScrollView
+        android:id="@+id/scrollview"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Detalle ticket"
-        android:textColor="#292A62"
-        android:textSize="28sp"
-        android:textStyle="bold"
+        android:fillViewport="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraitView"
+            android:paddingTop="64dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingBottom="200dp"
+            app:layout_constraintTop_toBottomOf="@+id/scrollview">
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Detalle ticket"
+                android:textColor="#292A62"
+                android:textSize="28sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tv1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:paddingHorizontal="32dp"
+                android:text="Id:"
+                android:textColor="#292A62"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView5" />
+
+            <TextView
+                android:id="@+id/txtIdTicket"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:paddingHorizontal="32dp"
+                android:text="1059967"
+                android:textColor="@color/color_dark_low"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv1" />
+
+            <TextView
+                android:id="@+id/tv2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:paddingHorizontal="32dp"
+                android:text="Nombre Usuario"
+                android:textColor="#292A62"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txtIdTicket" />
+
+            <TextView
+                android:id="@+id/txtNombrePersona"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:paddingHorizontal="32dp"
+                android:text="Anonimo"
+                android:textColor="@color/color_dark_low"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv2" />
+
+            <TextView
+                android:id="@+id/tv7"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:paddingHorizontal="32dp"
+                android:text="Correo Electronico"
+                android:textColor="#292A62"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txtNombrePersona" />
+
+            <TextView
+                android:id="@+id/txtCorreo"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:paddingHorizontal="32dp"
+                android:text="hola@gmail.com"
+                android:textColor="@color/color_dark_low"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv7" />
+
+            <TextView
+                android:id="@+id/tv3"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:paddingHorizontal="32dp"
+                android:text="Tipo de Solicitud"
+                android:textColor="#292A62"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txtCorreo" />
+
+            <TextView
+                android:id="@+id/txtTipoTicket"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:paddingHorizontal="32dp"
+                android:text="No funciona el correo "
+                android:textColor="@color/color_dark_low"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv3" />
+
+            <TextView
+                android:id="@+id/tv4"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:paddingHorizontal="32dp"
+                android:text="Descripcion"
+                android:textColor="#292A62"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txtTipoTicket" />
+
+            <TextView
+                android:id="@+id/txtDescripcionTicket"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:paddingHorizontal="32dp"
+                android:text="Descripcion del problema"
+                android:textColor="@color/color_dark_low"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv4" />
+
+            <TextView
+                android:id="@+id/tv5"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:paddingHorizontal="32dp"
+                android:text="Estado"
+                android:textColor="#292A62"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txtDescripcionTicket" />
+
+            <TextView
+                android:id="@+id/txtEstadoTicket"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:paddingHorizontal="32dp"
+                android:text="Atendido"
+                android:textColor="@color/color_dark_low"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv5" />
+
+            <TextView
+                android:id="@+id/tv6"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:paddingHorizontal="32dp"
+                android:text="Solucion"
+                android:textColor="#292A62"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txtEstadoTicket" />
+
+            <TextView
+                android:id="@+id/txtSolucionTicket"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:paddingHorizontal="32dp"
+                android:text="Detalle de la solucion"
+                android:textColor="@color/color_dark_low"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv6" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
+
+    <LinearLayout
+        android:paddingHorizontal="32dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tv1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Id:"
-        android:textColor="#292A62"
-        android:textStyle="bold"
-        android:layout_marginTop="32dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
-
-    <TextView
-        android:id="@+id/txtIdTicket"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="1059967"
-        android:textColor="@color/color_dark_low"
-        android:layout_marginTop="4dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv1"
-        />
-
-    <TextView
-        android:id="@+id/tv2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Nombre Usuario"
-        android:textColor="#292A62"
-        android:textStyle="bold"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtIdTicket" />
-
-    <TextView
-        android:id="@+id/txtNombrePersona"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Anonimo"
-        android:textColor="@color/color_dark_low"
-        android:layout_marginTop="4dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv2"
-        />
-
-    <TextView
-        android:id="@+id/tv7"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Correo Electronico"
-        android:textColor="#292A62"
-        android:textStyle="bold"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtNombrePersona" />
-
-    <TextView
-        android:id="@+id/txtCorreo"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="hola@gmail.com"
-        android:textColor="@color/color_dark_low"
-        android:layout_marginTop="4dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv7"
-        />
-
-    <TextView
-        android:id="@+id/tv3"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Tipo de Solicitud"
-        android:textColor="#292A62"
-        android:textStyle="bold"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtCorreo" />
-
-    <TextView
-        android:id="@+id/txtTipoTicket"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="No funciona el correo "
-        android:textColor="@color/color_dark_low"
-        android:layout_marginTop="4dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv3"
-        />
-
-    <TextView
-        android:id="@+id/tv4"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Descripcion"
-        android:textColor="#292A62"
-        android:textStyle="bold"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtTipoTicket" />
-
-    <TextView
-        android:id="@+id/txtDescripcionTicket"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Descripcion del problema"
-        android:textColor="@color/color_dark_low"
-        android:layout_marginTop="4dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv4"
-        />
-
-    <TextView
-        android:id="@+id/tv5"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Estado"
-        android:textColor="#292A62"
-        android:textStyle="bold"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtDescripcionTicket" />
-
-    <TextView
-        android:id="@+id/txtEstadoTicket"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Atendido"
-        android:textColor="@color/color_dark_low"
-        android:layout_marginTop="4dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv5"
-        />
-
-    <TextView
-        android:id="@+id/tv6"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Solucion"
-        android:textColor="#292A62"
-        android:textStyle="bold"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtEstadoTicket" />
-
-    <TextView
-        android:id="@+id/txtSolucionTicket"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Detalle de la solucion"
-        android:textColor="@color/color_dark_low"
-        android:layout_marginTop="4dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv6"
-        />
+        android:layout_marginBottom="16dp">
 
 
+        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:id="@+id/btnEliminarTicket"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
+            android:text="Eliminar"
+            android:textColor="@color/white"
+            app:backgroundTint="@color/color_warning"
+            android:layout_marginRight="16dp"
+            app:icon="@drawable/pencil"
+            app:iconTint="@color/white" />
+
+        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:id="@+id/btnOpcionCrearTicket"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
+            android:text="Actualizar"
+            android:textColor="@color/white"
+            app:backgroundTint="@color/color_primario_low"
+            app:icon="@drawable/pencil"
+            app:iconTint="@color/white"/>
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
