--- a/app/src/main/res/layout/activity_actualizar_ticket.xml
+++ b/app/src/main/res/layout/activity_actualizar_ticket.xml
@@ -116,19 +116,17 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtCorreo" />
 
-        <EditText
-            android:id="@+id/txtTipoTicket"
+        <Spinner
+            android:id="@+id/spinner"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-
+            android:layout_height="50dp"
+            android:layout_marginTop="16dp"
             android:layout_marginHorizontal="32dp"
-            android:layout_marginTop="4dp"
-            android:hint="No funciona el correo "
-            android:padding="12dp"
-            android:textColor="@color/color_dark_low"
+            android:paddingHorizontal="32dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv3" />
+
 
         <TextView
             android:id="@+id/tv4"
@@ -140,7 +138,7 @@
             android:textColor="#292A62"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtTipoTicket" />
+            app:layout_constraintTop_toBottomOf="@+id/spinner" />
 
         <EditText
             android:id="@+id/txtDescripcionTicket"
