--- a/app/src/main/res/layout/activity_usuario.xml
+++ b/app/src/main/res/layout/activity_usuario.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Usuario">
+    tools:context=".UsuarioActivity.Usuario">
 
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
