--- a/app/src/main/res/layout/contacto_item.xml
+++ b/app/src/main/res/layout/contacto_item.xml
@@ -24,7 +24,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="32dp"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <TextView
                     android:id="@+id/txtRazonSocial"
